--- a/man/mb.1.html
+++ b/man/mb.1.html
@@ -114,7 +114,7 @@ manifest documentation.</p>
 change the behavior.</p>
 
 <dl>
-<dt><code>-c</code>, <code>--config</code></dt><dd><p>Path to a MotherBrain JSON configuration file.</p></dd>
+<dt><code>-c</code>, <code>--config</code></dt><dd><p>Path to a motherbrain JSON configuration file.</p></dd>
 <dt><code>-v</code>, <code>--verbose</code></dt><dd><p>Increase verbosity of output.</p></dd>
 <dt><code>-d</code>, <code>--debug</code></dt><dd><p>Output all log messages.</p></dd>
 <dt><code>-L</code>, <code>--logfile</code></dt><dd><p>Set the log file location.</p></dd>
